--- a/src/mail/templates/welcome.html
+++ b/src/mail/templates/welcome.html
@@ -27,7 +27,7 @@
 <body style="font-family: Arial, sans-serif; color: #333;">
     <div style="max-width: 600px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px;">
         <header>
-            <img src="logo.jpg" alt="Logo de {{app_name}}" style="width: 100px; height: 100px;">
+            <a href="{{api_url}}/docs"><img src="{{api_url}}/files/logo.jpg" alt="Logo de {{app_name}}" style="width: 100px; height: 100px;"></a>
             <h1>Bienvenue à {{app_name}}, {{person.first_name}}!</h1>
         </header>
         <section>
