--- a/src/mail/templates/welcome.html
+++ b/src/mail/templates/welcome.html
@@ -34,7 +34,7 @@
             <p>Cher/Chère {{ person.first_name}},</p>
             <p>Merci de vous être inscrit à {{app_name}}. Avant de commencer, veuillez activer votre compte en cliquant
                 sur le bouton ci-dessous.</p>
-            <a href="https://yourdomain.com/activate?token=yourUniqueToken" class="button">Activer Mon Compte</a>
+            <a href="{{redirect_url}}" class="button">Activer Mon Compte</a>
             <p>Après activation, vous pourrez profiter de tous nos services sans restriction.</p>
             <p>Voici ce que vous pouvez attendre de notre service :</p>
             <ul>
