refactor: Reconfigurer le service user - Supprimer le service customer - créer le service user - supprimer les tests du service customer - ajouter les tests du service user - ajouter une dépendance pour capturer l'utilisateur en ligne en fonction de son rôle

--- a/src/mail/templates/password_reset.html
+++ b/src/mail/templates/password_reset.html
@@ -6,8 +6,8 @@
 <body>
     <h1>Réinistialisation mot de passe</h1>
     <p>
-        Good morning {{customer.full_name()}},
-        You have requested to reset your password.  Votre code de réinistialisation est: {{customer.reset_password_code}}
+        Good morning {{user.full_name()}},
+        You have requested to reset your password.  Votre code de réinistialisation est: {{user.reset_password_code}}
         Veuillez ignorer ce message si vous n'avez pas demandé de réinitialiser votre mot de passe.
     </p>
 </html>
