--- a/src/mail/templates/update-email.html
+++ b/src/mail/templates/update-email.html
@@ -1,6 +1,6 @@
 
 
-<p>Bonjour {{customer.first_name}} {{customer.last_name}}</p>
+<p>Bonjour {{user.first_name}} {{user.last_name}}</p>
 <p>Après la modification de votre email vous devez le valider</p>
 <p>Cliquez sur le bouton ci-dessous pour valider votre nouvel email
     <button>
