--- a/src/invoice/template/order_invoice.html
+++ b/src/invoice/template/order_invoice.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facture</title>
-    <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- <link rel="stylesheet" href="{{api_url}}/files/order_invoice.css" type="text/css" /> -->
-    <!-- <link rel="stylesheet" href="C:\Users\ahoun\OneDrive\Documents\Documents\Web\FastAPI\src\static/order_invoice.css" type="text/css" /> -->
+    <link
+      rel="stylesheet"
+      href="{{api_url}}/files/order_invoice.css"
+      type="text/css"
+    />
+
+    <link rel="stylesheet" href="C:\Users\ahoun\OneDrive\Documents\Documents\Web\FastAPI\src\static/order_invoice.css" type="text/css" />
   </head>
   <body>
-    <header class="md:flex md:w-5/6 md:m-auto md:justify-center md:items-center ">
-
-      <div class="w-1/2 m-auto md:flex-auto md:w-10">      
-        <!-- <img src="{{api_url}}/files/logo.jpg" , alt="RCCM et IFU" /> -->
-
-         <img class="w-1/2 m-auto  md:w-5/6 md:text-xl" src="C:\Users\ahoun\OneDrive\Documents\Documents\Web\FastAPI\src\static/logo.jpg" , alt="RCCM et IFU" />     
+    <header>
+      <div>
+        <img src="{{api_url}}/files/logo.jpg" , alt="RCCM et IFU" />
+        <img src="../../static/logo.jpg" alt="RCCM et IFU">
       </div>
-      <div class="text-center font-bold md:flex-auto md:text-4xl md:flex md:flex-col ">
-      <h1 class="m-0 lg:text-6xl">  PRESSING & BLANCHISSERIE </h1>
-      <p class="m-0 italic font-thin text-xs text-blue-500 md:text-xl">  RCCM: RB/ABC/22 A 41623 - IFU 1201525365809 </p>
+      <div>
+        <h1>PRESSING & BLANCHISSERIE</h1>
+        <p>RCCM: RB/ABC/22 A 41623 - IFU 1201525365809</p>
       </div>
-
     </header>
 
-
     <h2>
-      Facture Pro Forma
-      <span class="blue_color"> # {{ num_order}}/{{month_order}}/{{year_order}}</span>
+      FACTURE PRO FORMA
+      <span> # {{ num_order}}/{{month_order}}/{{year_order}}</span>
     </h2>
 
     <div id="order_infos">
@@ -44,20 +44,16 @@
         <table id="payment_methods">
           <tbody>
             <tr>
-              <td>
-                MOMO PAY: <span class="blue">*880*41*955497*Montant#</span>
-              </td>
+              <td>MOMO PAY: <span>*880*41*955497*Montant#</span></td>
             </tr>
             <tr>
-              <td>
-                MOOV PAY: <span class="blue">*855*4*1*22518*Montant#</span>
-              </td>
+              <td>MOOV PAY: <span>*855*4*1*22518*Montant#</span></td>
             </tr>
           </tbody>
         </table>
       </div>
 
-      <div class="background_dark_blue">
+      <div>
         <p><strong>Date de Livraison: {{delivery_date}}</strong></p>
         <p><strong>Paiement dû: {{delivery_date}} - 1</strong></p>
       </div>
