--- a/src/static/order_invoice.css
+++ b/src/static/order_invoice.css
@@ -1,46 +1,10 @@
-
-
-
- header p  {
-   font-style: italic;
-   color: rgb(3, 122, 122);
-   font-weight: 100;
- }
-
- header div:first-of-type  {
-    flex: 1;
- }
-
- header div:last-of-type  {
-    display: flex;
-    flex: 3;
-    flex-direction: column;
-    justify-content: center;
- }
-
- h1 {
-    font-size: 2.5em;
-    font-weight: 100;
- }
-
- header {
-    display: flex;
-    width: 80%;
-    margin: auto;
- }
-
- h2 {
-    width: 60%;
-    margin: auto;
-    font-weight: 100;
- }
-
-.blue_color {
-    color: rgb(41, 143, 221)
+.swagger-ui .topbar .wrapper .link span {
+   display: none !important;
 }
 
-header div img {
-    width: 100%;
-    height: 100%;
-    margin: auto;
+.swagger-ui .topbar .wrapper .link {
+   background: url("/files/img/logo.jpg") no-repeat left center !important;
+   background-size: contain !important;
+   width: 160px !important;
+   height: 40px !important;
 }
